import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import { fileURLToPath } from 'url';
import { config } from './config/env.js';
import prisma from './config/database.js';
import * as porterHandlers from './handlers/porter.handler.js';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

// Path à¹„à¸›à¸¢à¸±à¸‡ proto file à¸ˆà¸²à¸ src/server.js -> proto/porter.proto
const PROTO_PATH = path.resolve(__dirname, '../proto/porter.proto');

/**
 * à¹‚à¸«à¸¥à¸” Proto Definition
 */
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const porterProto = grpc.loadPackageDefinition(packageDefinition).porter;

/**
 * à¹€à¸£à¸´à¹ˆà¸¡à¸•à¹‰à¸™ gRPC Server
 */
const startServer = async () => {
  try {
    // Test database connection
    await prisma.$connect();
    console.info('âœ… Database connected successfully');

    // à¸ªà¸£à¹‰à¸²à¸‡ gRPC Server
    const server = new grpc.Server();

    // à¸¥à¸‡à¸—à¸°à¹€à¸šà¸µà¸¢à¸™ Porter Service
    server.addService(porterProto.PorterService.service, {
      // Porter Request handlers
      createPorterRequest: porterHandlers.createPorterRequest,
      getPorterRequest: porterHandlers.getPorterRequest,
      listPorterRequests: porterHandlers.listPorterRequests,
      updatePorterRequest: porterHandlers.updatePorterRequest,
      updatePorterRequestStatus: porterHandlers.updatePorterRequestStatus,
      updatePorterRequestTimestamps: porterHandlers.updatePorterRequestTimestamps,
      deletePorterRequest: porterHandlers.deletePorterRequest,
      healthCheck: porterHandlers.healthCheck,
      streamPorterRequests: porterHandlers.streamPorterRequests,
      // Location Settings handlers
      createBuilding: porterHandlers.createBuilding,
      getBuilding: porterHandlers.getBuilding,
      listBuildings: porterHandlers.listBuildings,
      updateBuilding: porterHandlers.updateBuilding,
      deleteBuilding: porterHandlers.deleteBuilding,
      createFloorDepartment: porterHandlers.createFloorDepartment,
      getFloorDepartment: porterHandlers.getFloorDepartment,
      listFloorDepartments: porterHandlers.listFloorDepartments,
      updateFloorDepartment: porterHandlers.updateFloorDepartment,
      deleteFloorDepartment: porterHandlers.deleteFloorDepartment,
      // Employee Management handlers
      createEmployee: porterHandlers.createEmployee,
      getEmployee: porterHandlers.getEmployee,
      listEmployees: porterHandlers.listEmployees,
      updateEmployee: porterHandlers.updateEmployee,
      deleteEmployee: porterHandlers.deleteEmployee,
      // EmploymentType Management handlers
      createEmploymentType: porterHandlers.createEmploymentType,
      getEmploymentType: porterHandlers.getEmploymentType,
      listEmploymentTypes: porterHandlers.listEmploymentTypes,
      updateEmploymentType: porterHandlers.updateEmploymentType,
      deleteEmploymentType: porterHandlers.deleteEmploymentType,
      // Position Management handlers
      createPosition: porterHandlers.createPosition,
      getPosition: porterHandlers.getPosition,
      listPositions: porterHandlers.listPositions,
      updatePosition: porterHandlers.updatePosition,
      deletePosition: porterHandlers.deletePosition,
    });

    // à¹€à¸£à¸´à¹ˆà¸¡ listen
    const port = config.port || 50051;
    server.bindAsync(
      `0.0.0.0:${port}`,
      grpc.ServerCredentials.createInsecure(),
      (error, port) => {
        if (error) {
          console.error('âŒ Failed to start gRPC server:', error);
          process.exit(1);
        }

        server.start();
        console.info(`ðŸš€ gRPC Server is running on port ${port}`);
        console.info(`ðŸ“ Environment: ${config.nodeEnv}`);
        console.info(`ðŸŒ gRPC endpoint: 0.0.0.0:${port}`);
      }
    );
  } catch (error) {
    console.error('âŒ Failed to start server:', error);
    await prisma.$disconnect();
    process.exit(1);
  }
};

// Handle unhandled promise rejections
process.on('unhandledRejection', (err) => {
  console.error('Unhandled Rejection:', err);
  process.exit(1);
});

// Handle uncaught exceptions
process.on('uncaughtException', (err) => {
  console.error('Uncaught Exception:', err);
  process.exit(1);
});

// Graceful shutdown
process.on('SIGTERM', async () => {
  console.info('SIGTERM received, shutting down gracefully...');
  await prisma.$disconnect();
  process.exit(0);
});

process.on('SIGINT', async () => {
  console.info('SIGINT received, shutting down gracefully...');
  await prisma.$disconnect();
  process.exit(0);
});

startServer();