import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import { config } from './config/env';
import prisma from './config/database';
import * as porterHandlers from './handlers/porter.handler';

// Path à¹„à¸›à¸¢à¸±à¸‡ proto file à¹ƒà¸™ shared/proto/porter.proto
// à¸£à¸­à¸‡à¸£à¸±à¸šà¸—à¸±à¹‰à¸‡ development (__dirname = backend/porter/src/) à¹à¸¥à¸° production (__dirname = backend/porter/dist/)
// à¸ˆà¸²à¸ backend/porter/src/ à¸«à¸£à¸·à¸­ backend/porter/dist/ à¹„à¸›à¸—à¸µà¹ˆ shared/proto/porter.proto = ../../../shared/proto/porter.proto
const PROTO_PATH = path.resolve(__dirname, '../../../shared/proto/porter.proto');

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const porterProto = grpc.loadPackageDefinition(packageDefinition) as unknown as {
  porter: {
    PorterService: {
      service: grpc.ServiceDefinition;
    };
  };
};

const startServer = async () => {
  try {
    await prisma.$connect();
    console.info('âœ… Database connected successfully');

    const server = new grpc.Server({
      // à¹€à¸žà¸´à¹ˆà¸¡ max message size à¹€à¸›à¹‡à¸™ 10MB à¹€à¸žà¸·à¹ˆà¸­à¸£à¸­à¸‡à¸£à¸±à¸šà¸‚à¹‰à¸­à¸¡à¸¹à¸¥à¸‚à¸™à¸²à¸”à¹ƒà¸«à¸à¹ˆ
      // Default à¸„à¸·à¸­ 4MB (4194304 bytes) à¸‹à¸¶à¹ˆà¸‡à¹„à¸¡à¹ˆà¸žà¸­à¸ªà¸³à¸«à¸£à¸±à¸šà¸šà¸²à¸‡ request/response
      'grpc.max_receive_message_length': 10 * 1024 * 1024, // 10MB
      'grpc.max_send_message_length': 10 * 1024 * 1024, // 10MB
    });

    server.addService(porterProto.porter.PorterService.service, {
      createPorterRequest: porterHandlers.createPorterRequest,
      getPorterRequest: porterHandlers.getPorterRequest,
      listPorterRequests: porterHandlers.listPorterRequests,
      updatePorterRequest: porterHandlers.updatePorterRequest,
      updatePorterRequestStatus: porterHandlers.updatePorterRequestStatus,
      updatePorterRequestTimestamps: porterHandlers.updatePorterRequestTimestamps,
      deletePorterRequest: porterHandlers.deletePorterRequest,
      healthCheck: porterHandlers.healthCheck,
      streamPorterRequests: porterHandlers.streamPorterRequests,
      createBuilding: porterHandlers.createBuilding,
      getBuilding: porterHandlers.getBuilding,
      listBuildings: porterHandlers.listBuildings,
      updateBuilding: porterHandlers.updateBuilding,
      deleteBuilding: porterHandlers.deleteBuilding,
      createFloorDepartment: porterHandlers.createFloorDepartment,
      getFloorDepartment: porterHandlers.getFloorDepartment,
      listFloorDepartments: porterHandlers.listFloorDepartments,
      updateFloorDepartment: porterHandlers.updateFloorDepartment,
      deleteFloorDepartment: porterHandlers.deleteFloorDepartment,
      createFloorPlan: porterHandlers.createFloorPlan,
      getFloorPlan: porterHandlers.getFloorPlan,
      listFloorPlans: porterHandlers.listFloorPlans,
      updateFloorPlan: porterHandlers.updateFloorPlan,
      deleteFloorPlan: porterHandlers.deleteFloorPlan,
      createBleStation: porterHandlers.createBleStation,
      getBleStation: porterHandlers.getBleStation,
      listBleStations: porterHandlers.listBleStations,
      updateBleStation: porterHandlers.updateBleStation,
      deleteBleStation: porterHandlers.deleteBleStation,
      createEmployee: porterHandlers.createEmployee,
      getEmployee: porterHandlers.getEmployee,
      listEmployees: porterHandlers.listEmployees,
      updateEmployee: porterHandlers.updateEmployee,
      deleteEmployee: porterHandlers.deleteEmployee
    });

    const port = config.port || 50051;
    server.bindAsync(
      `0.0.0.0:${port}`,
      grpc.ServerCredentials.createInsecure(),
      (error, boundPort) => {
        if (error) {
          console.error('âŒ Failed to start gRPC server:', error);
          process.exit(1);
        }

        server.start();
        console.info(`ðŸš€ gRPC Server is running on port ${boundPort}`);
        console.info(`ðŸ“ Environment: ${config.nodeEnv}`);
        console.info(`ðŸŒ gRPC endpoint: 0.0.0.0:${boundPort}`);
      }
    );
  } catch (error) {
    console.error('âŒ Failed to start server:', error);
    await prisma.$disconnect();
    process.exit(1);
  }
};

process.on('unhandledRejection', (err) => {
  console.error('Unhandled Rejection:', err);
  process.exit(1);
});

process.on('uncaughtException', (err) => {
  console.error('Uncaught Exception:', err);
  process.exit(1);
});

process.on('SIGTERM', async () => {
  console.info('SIGTERM received, shutting down gracefully...');
  await prisma.$disconnect();
  process.exit(0);
});

process.on('SIGINT', async () => {
  console.info('SIGINT received, shutting down gracefully...');
  await prisma.$disconnect();
  process.exit(0);
});

startServer();


